chore: apply pre-commit fixes

--- a/src/content/markdown/test.mdx
+++ b/src/content/markdown/test.mdx
@@ -1,8 +1,8 @@
 ![Alt text](/public/gallery/nature/nature-1.jpg)
 
 ---
-title: About me
----
+
+## title: About me
 
 ### Hi, I'm Sara Richard 👋
 
@@ -15,17 +15,16 @@ I've been a photographer for over 10 years
 ![Alt text](/public/gallery/nature/nature-1.jpg)
 
 <iframe
-  width="600"
-  height="315"
-  src="https://www.youtube.com/watch?v=3HabGMzNRt4"
-  title="YouTube video player"
-  frameborder="0"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen
+	width="600"
+	height="315"
+	src="https://www.youtube.com/watch?v=3HabGMzNRt4"
+	title="YouTube video player"
+	frameborder="0"
+	allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+	allowfullscreen
 ></iframe>
 
 <video width="600" controls>
-  <source src="/path/to/video.mp4" type="video/mp4" />
-  Your browser does not support the video tag.
+	<source src="/path/to/video.mp4" type="video/mp4" />
+	Your browser does not support the video tag.
 </video>
-
